# Chip8-emu

./: .gitignore  CMakeLists.txt  main.cpp
Chip8/: Chip8.cpp  Chip8.h
FailStates/: FailStates.h
Machine/: Machine.cpp  Machine.h
